fix: don't use `setLevel` method

--- a/eco-api/build.gradle
+++ b/eco-api/build.gradle
@@ -20,9 +20,9 @@ dependencies {
     compileOnly 'com.google.code.gson:gson:2.8.8'
 }
 
-java {
-    withJavadocJar()
-}
+//java {
+//    withJavadocJar()
+//}
 
 
 build.dependsOn publishToMavenLocal
